# fast-neural-style

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  download_styling_models.sh  pyproject.toml  requirements.txt
neural_style/: neural_style.py  utils.py
