[tool.poetry]
name = "stylish-shirts-backend"
version = "0.1.0"
description = ""
authors = ["Richard Hausman"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.7.1"
scipy = "^1.6.0"
torchvision = "^0.8.2"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
